--- a/DNA_Barcoding.Rmd
+++ b/DNA_Barcoding.Rmd
@@ -70,8 +70,4 @@ Lucas C, Thangaradjou T, Papenbrock J (2012) Development of a DNA barcoding syst
 Nguyen XV, Höfler S, Glasenapp Y, Thangaradjou T, Lucas C, Papenbrock J (2015) New insights into DNA barcoding of seagrasses. *Syst Biodivers* 13(5):496-508
 
 ### How to cite this page?
-**Contoh dari:** SILVA Terms of Use/License Information
-As of release 138 the SILVA databases, its taxonomy, and all files provided for download are licensed under Create Commons Attribution 4.0 (CC-BY 4.0).
-
-All data is freely available for academic and commercial use as long as SILVA is credited as original author and a link to the full license is provided.
-Releases before SILVA 138 are not affected by the new license. Please refer to the license file provided in each download directory for the license associated with the provided files.
+Lihat halaman depan web ini untuk mendapatkan detail tentang hak cipta
