--- a/Editing_Sequence.Rmd
+++ b/Editing_Sequence.Rmd
@@ -120,8 +120,4 @@ Lemey, P., Salemi, M., and Vandamme, A. (eds). 2009. The Phylogenetic Handbook: 
 Sudhir Kumar, Glen Stecher, Michael Li, Christina Knyaz, and Koichiro Tamura (2018) MEGA X: Molecular Evolutionary Genetics Analysis across computing platforms. Molecular Biology and Evolution 35:1547-1549
 
 ### How to cite this page?
-**Contoh dari:** SILVA Terms of Use/License Information
-As of release 138 the SILVA databases, its taxonomy, and all files provided for download are licensed under Create Commons Attribution 4.0 (CC-BY 4.0).
-
-All data is freely available for academic and commercial use as long as SILVA is credited as original author and a link to the full license is provided.
-Releases before SILVA 138 are not affected by the new license. Please refer to the license file provided in each download directory for the license associated with the provided files.
+Lihat halaman depan web ini untuk mendapatkan detail tentang hak cipta
